--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: dynamic_array CI
 
 on:
   push:
@@ -13,11 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - name: compile
+      run: gcc --std=c99 *.c -o main
+    - name: execute
+      run: ./maingithub actions for c
+    - name: clean
+      run: rm ./main
