--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,5 +13,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: compile
-      run: gcc --std=c99 *.c -o main
+    - name: install cppunit
+      run: sudo apt install -y libcppunit-dev
+    - name: configure
+      run: ./configure
+    - name: make
+      run: make
+    - name: make check
+      run: make check
+    - name: make distcheck
+      run: make distcheck
